[IMP] add auth middleware to todo endpoints
